adjusted a spacing issue in header title

--- a/Day-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
+++ b/Day-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
@@ -20,9 +20,10 @@
    display: flex; 
    flex-wrap: wrap; 
    width: 70%; 
+   transform: translate(0px, 12px); 
     
 }
  .Main-Text {
    font-size: 14px;
-   width: 100%;
+   width: 99%;
 } 
